files modified to ensur content is legibly and correctly displayed on tablet

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,500&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
     font-family: "Poppins", sans-serif;
@@ -9,18 +10,18 @@
 
 .header {
     background-color: #cfe6cf;
-    height: 100px;
+    height: 150px;
     background: url('/images/banner-2.jpg') no-repeat;
     background-position: center;
     background-size: cover;
     display: flex;
     align-items: center;
-    
+
 }
 
-.profile-picture{
+.profile-picture {
     position: relative;
-    top: -28px;
+    top: -46px;
     left: 20px;
 }
 
@@ -28,12 +29,12 @@
     border: 3px solid #CA6D18;
     border-radius: 50%;
     position: absolute;
-    
+
 }
 
-.container{
+.container {
     position: relative;
-    left: 100px;
+    left: 130px;
 }
 
 h1 {
@@ -46,11 +47,11 @@ h2 {
     color: #CA6D18;
 }
 
-.position{
+.position {
     font-size: 11px;
 }
 
-p {
+.container p {
     font-size: 11px;
     color: #797979;
 }
@@ -63,22 +64,22 @@ p {
     height: 60px;
 }
 
-.menu h2{
+.menu h2 {
     padding: 5px 0 0 0;
     text-align: center;
 }
 
-.internal-links ul{
+.internal-links ul {
     display: flex;
     justify-content: center;
     list-style-type: none;
 }
 
-li{
+li {
     padding-right: 5px;
 }
 
-a{
+a {
     font-size: 12px;
 }
 
@@ -91,11 +92,12 @@ a:hover {
     text-decoration: underline;
 }
 
-a:visited{
+a:visited {
     color: black;
 }
 
-a.company:link, a.company:visited {
+a.company:link,
+a.company:visited {
     color: #797979;
 }
 
@@ -104,7 +106,11 @@ h3 {
     font-size: 12px;
 }
 
-.education{
+p {
+    font-size: 11px;
+}
+
+.education {
     padding: 10px 10px 0;
 }
 
@@ -114,16 +120,17 @@ h3 {
     display: flex;
 }
 
-.experience{
+.experience {
     flex: 2;
 }
 
-.skills{
+.skills {
     margin-left: 18px;
     flex: 1;
 }
 
-.experience ul, .skills ul{
+.experience ul,
+.skills ul {
     padding-left: 18px;
     font-size: 11px;
 }
@@ -135,7 +142,7 @@ h3 {
     flex-direction: column;
 }
 
-.form-box{
+.form-box {
     margin: 20px 40px 20px 40px;
     z-index: 1;
     position: relative;
@@ -148,31 +155,35 @@ h3 {
     border-radius: 20px;
 }
 
-.form-box h3{
+.form-box h3 {
     margin: 7px 0 20px 0;
     text-align: center;
 }
-span{
+
+span {
     color: #CA6D18;
 }
 
-.inputbox{
+.inputbox {
     position: relative;
     margin: 30px 2px 10px 0;
 }
 
-.inputbox label{
+.inputbox label {
     position: absolute;
-    left: 10px;
-    top: -90%;
-    font-size: 1em;
+    top: -50%;
+    font-size: 0.6em;
 }
 
-.inputbox input, #subject, textarea{
+.inputbox input,
+#subject,
+textarea {
+    font-size: 0.6em;
     border: 1px solid rgba(0, 0, 0, 0.2);
 }
-textarea{
-    width: 165px;
+
+textarea {
+    width: 80%;
     height: auto;
 }
 
@@ -188,36 +199,146 @@ textarea{
     font-weight: 600;
 }
 
-.footer-container{
+.footer-container {
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.placeholder{
+.placeholder {
     background-color: hsla(0, 0%, 100%, 0.3);
     border: 2px dashed black;
     border-radius: 10%;
-    height: 351px;
+    height: 328px;
     width: 182px;
     margin-right: 30px;
 }
 
-.contactDetails{
+.contactDetails {
     margin-bottom: 10px;
 }
 
 /* Medium devices (Tablet portrait mode, 600px and up) */
 @media only screen and (min-width: 600px) {
-    body { background-color: blue; }
+    .header {
+        background-color: #cfe6cf;
+        height: 200px;
+    }
+
+    .profile-picture {
+        top: -82px;
+    }
+
+    #image {
+        border: 4px solid #CA6D18;
+    }
+
+    .container {
+        left: 200px;
+    }
+
+    h1 {
+        font-size: 30px;
+        color: #797979;
+    }
+
+    h2 {
+        font-size: 20px;
+        color: #CA6D18;
+    }
+
+    .position {
+        font-size: 17px;
+    }
+
+    .container p {
+        padding-top: 15px;
+        font-size: 14px;
+        color: #fff;
+    }
+
+    .navbar {
+        height: 70px;
+    }
+
+    .menu h2 {
+        padding: 10px 0 0 0;
+    }
+
+    li {
+        padding-right: 10px;
+    }
+
+    a {
+        font-size: 17px;
+    }
+
+    h3 {
+        margin-top: 12px;
+        font-size: 17px;
+    }
+
+    p {
+        font-size: 15px;
+    }
+
+    .education {
+        padding: 10px 20px 0 20px;
+    }
+
+    .workExperience-skillsTools {
+        margin-bottom: 40px;
+        padding: 10px 20px 0;
+    }
+
+    .skills {
+        margin-left: 16px;
+    }
+
+    .experience ul,
+    .skills ul {
+        padding-left: 22px;
+        font-size: 15px;
+    }
+
+    .form-box h3 {
+        font-size: 20px;
+    }
+
+    .inputbox label {
+        left: 20px;
+        top: -70%;
+        font-size: 0.9em;
+    }
+
+    .inputbox input,
+    #subject,
+    textarea {
+        font-size: 0.7em;
+        border: 1px solid rgba(0, 0, 0, 0.2);
+    }
+
+    textarea {
+        width: 150px;
+    }
+
+    #submitBtn {
+        font-size: 1.5em;
+    }
+
+    .placeholder {
+        height: 351px;
+        width: 282px;
+    }
+
+    .contactDetails {
+        margin-bottom: 30px;
+    }
 }
 
 /* Large devices (Laptops/Desktops, 1024px and up) */
 @media only screen and (min-width: 1024px) {
-    body { background-color: yellow; }
-}
-
-/* Extra large devices (Desktops, Widescreen and larger, 1200px and up) */
-@media only screen and (min-width: 1400px) {
-    body { background-color: orange; }
+    body {
+        background-color: yellow;
+    }
 }
